--- a/CMS.html
+++ b/CMS.html
@@ -389,18 +389,18 @@
         function calculateResult() {
             const form = document.getElementById('questionnaire');
             const scores = {
-                'Avoidance': 0,
-                'Competition': 0,
-                'Accommodation': 0,
-                'Compromise': 0,
-                'Collaboration': 0
+                'Avoidance(避免型)': 0,
+                'Competition(競爭型)': 0,
+                'Accommodation(妥協型)': 0,
+                'Compromise(協商型)': 0,
+                'Collaboration(合作型)': 0
             };
             const styleQuestions = {
-                'Avoidance': [1, 6, 11, 16, 21, 26],
-                'Competition': [2, 7, 12, 17, 22, 27],
-                'Accommodation': [3, 8, 13, 18, 23, 28],
-                'Compromise': [4, 9, 14, 19, 24, 29],
-                'Collaboration': [5, 10, 15, 20, 25, 30]
+                'Avoidance(避免型)': [1, 6, 11, 16, 21, 26],
+                'Competition(競爭型)': [2, 7, 12, 17, 22, 27],
+                'Accommodation(妥協型)': [3, 8, 13, 18, 23, 28],
+                'Compromise(協商型)': [4, 9, 14, 19, 24, 29],
+                'Collaboration(合作型)': [5, 10, 15, 20, 25, 30]
             };
             const missingQuestions = [];
 
@@ -451,4 +451,5 @@
         }
     </script>
 </body>
+
 </html>
